--- a/index.html
+++ b/index.html
@@ -1,24 +1,19 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-   <script src="js/ajax-utils.js"></script>
+  <head>
+    <meta charset="UTF-8" />
+    <meta http-equiv="X-UA-Compatible" content="IE=edge" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <script src="js/ajax-utils.js"></script>
     <script src="js/script.js"></script>
     <title>Moudel 5 solution</title>
-</head>
-<body>
+  </head>
+  <body>
     <h1 id="title">Title</h1>
     <p>
-              
-        <button>
-            Say hello to Someone on the server
-        </button>
+      <button>Say hello to Someone on the server</button>
     </p>
 
     <div id="content"></div>
-
-   
-</body>
+  </body>
 </html>
